tests/rosetta/out/Rust/barnsley-fern.error
rustc: exit status 1
error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/barnsley-fern.rs:11:45
   |
11 |     let height = ((width as f64) * dy / dx).parse::<i32>().unwrap();
   |                                             ^^^^^ method not found in `f64`

error[E0689]: can't call method `parse` on ambiguous numeric type `{integer}`
  --> /tmp/barnsley-fern.rs:31:26
   |
31 |     let mut ix = ((width.parse::<f64>().unwrap()) * (x - xMin) / dx).parse::<i32>().unwrap();
   |                          ^^^^^
   |
help: you must specify a type for this binding, like `i32`
   |
7  |     let width: i32 = 60;
   |              +++++

error[E0689]: can't call method `parse` on ambiguous numeric type `{integer}`
  --> /tmp/barnsley-fern.rs:47:22
   |
47 |         ix = ((width.parse::<f64>().unwrap()) * (x - xMin) / dx).parse::<i32>().unwrap();
   |                      ^^^^^
   |
help: you must specify a type for this binding, like `i32`
   |
7  |     let width: i32 = 60;
   |              +++++

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0599, E0689.
For more information about an error, try `rustc --explain E0599`.
